--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-intl": "^6.2.8",
     "react-scripts": "5.0.1",
     "reactjs-localstorage": "^1.0.1",
+    "use-timer": "^2.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
