--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-bootstrap": "^2.7.0",
     "react-dom": "^18.2.0",
     "react-intl": "^6.2.8",
+    "react-router-dom": "^6.10.0",
     "react-scripts": "5.0.1",
     "reactjs-localstorage": "^1.0.1",
     "use-timer": "^2.0.1",
