--- a/package.json
+++ b/package.json
@@ -19,8 +19,8 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "set HOST=http://q.tofmal.ru/ && react-scripts start",
-    "build": "react-scripts build",
+    "start": "react-scripts start",
+    "build": "set HOST=http://q.tofmal.ru/ && react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
