--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.2.1",
     "bootstrap": "^5.2.3",
+    "node-sass": "^7.0.3",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.0",
     "react-dom": "^18.2.0",
@@ -15,6 +16,7 @@
     "react-router-dom": "^6.10.0",
     "react-scripts": "5.0.1",
     "reactjs-localstorage": "^1.0.1",
+    "saas": "^1.0.0",
     "use-timer": "^2.0.1",
     "web-vitals": "^2.1.4"
   },
